--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,8 +1,10 @@
 FROM python:3.8-buster
 RUN apt-get update 
 WORKDIR /usr/src/app
+ENV PYTHONDONTWRITEBYTECODE 1
+ENV PYTHONUNBUFFERED 1  
 COPY requirements ./
 RUN pip install -r requirements
 COPY . .
-EXPOSE 8000
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+EXPOSE 8080
+CMD ["python", "manage.py", "runserver", "0.0.0.0:8080"]
