--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /usr/src/app
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1  
 COPY app/requirements.txt ./
-RUN pip install -r requirements
+RUN pip install -r requirements.txt
 COPY app/ .
 RUN python manage.py migrate
 EXPOSE 8080
