change k8s folder place

--- a/pipeline/base/kustomize-task.yaml
+++ b/pipeline/base/kustomize-task.yaml
@@ -23,7 +23,7 @@ spec:
       script: |
         #!/bin/sh
 
-        cd source/k8s
+        cd source/app/k8s
 
         if [ -f kustomization.yaml ] || [ -f kustomization.yml ] || [ -f Kustomization ]; then
           echo "Kustomization file found."
