--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -3,9 +3,11 @@ RUN apt-get update
 WORKDIR /usr/src/app
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1  
+ENV DJANGO_SUPERUSER_USERNAME=squad3admin
+ENV DJANGO_SUPERUSER_PASSWORD=admin
+ENV DJANGO_SUPERUSER_EMAIL=admin@admin.com
 COPY app/requirements.txt ./
 RUN pip install -r requirements.txt
 COPY app/ .
-RUN python manage.py migrate
 EXPOSE 8080
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8080"]
+CMD ["./runserver.sh"]
