--- a/pipeline/base/emea5-squad3-pipeline.yaml
+++ b/pipeline/base/emea5-squad3-pipeline.yaml
@@ -83,3 +83,16 @@ spec:
       workspaces:
         - name: source
           workspace: pipeline-shared-data   
+    - name: gitops
+      runAfter:
+        - try-to-deploy
+      taskRef:
+        name: commit-manifest
+      params:
+        - name: app-name
+          value: "$(params.app-name)"
+        - name: sha
+          value: "$(tasks.clone-repository.results.commit)"
+      workspaces:
+        - name: source
+          workspace: pipeline-shared-data
